# harness-feature-flag-mobile-testing

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  FIRST-RUN.sh  INSTALL-DEPENDENCIES.sh  Jenkinsfile  LICENSE  README.md  RELEASE-NOTES.md  binding.gyp  ffserver.conf  jenkins.sh  release-android.sh  release-ios.sh  setup.py  test.264  version.sh
android/surge/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/surge/src/androidTest/java/co/instil/surge/: ApplicationTest.java
android/surge/src/main/: AndroidManifest.xml
android/surge/src/main/java/co/instil/surge/: RtspPlayer.java
android/surge/src/main/java/co/instil/surge/authentication/: SurgeAuthenticator.java
android/surge/src/main/java/co/instil/surge/callbacks/: BooleanCallback.java  PlayerCallback.java  ResponseCallback.java
android/surge/src/main/java/co/instil/surge/client/: DescribeResponse.java  ExtendedHeader.java  Response.java  ResponseCallback.java  RtspClient.java  RtspClientDelegate.java  SessionDescription.java  SessionType.java  SetupResponse.java  SurgeSurface.java  SurgeVideoScale.java  SurgeVideoView.java
android/surge/src/main/java/co/instil/surge/decoders/: AsyncH264Decoder.java  AsyncMp4vDecoder.java  Decoder.java  Decoder.kt  DecoderFactory.java  DecoderFactory.kt  H264Decoder.java  MediaCodecFactory.java  MjpegDecoder.java  Mp4vDecoder.java  SyncH264Decoder.java
android/surge/src/main/java/co/instil/surge/decoders/h264/: AsyncH264Decoder.java  H264Decoder.java  H264Decoder.kt  H264Packet.java  H264Packet.kt  SyncH264Decoder.java
android/surge/src/main/java/co/instil/surge/decoders/h265/: H265Decoder.kt  H265Packet.kt
android/surge/src/main/java/co/instil/surge/decoders/mjpeg/: MjpegDecoder.java
android/surge/src/main/java/co/instil/surge/decoders/mp4v/: AsyncMp4vDecoder.java
android/surge/src/main/java/co/instil/surge/device/: DeviceExaminer.java
android/surge/src/main/java/co/instil/surge/diagnostics/: DiagnosticsTracker.java  DiagnosticsTracker.kt  RtpPacketBufferInfo.java  RtpPacketBufferInfo.kt  SurgeDiagnostics.java  SurgeDiagnostics.kt  SurgeDiagnosticsDelegate.java  SurgeDiagnosticsDelegate.kt
android/surge/src/main/java/co/instil/surge/logger/: Logger.java
android/surge/src/main/java/co/instil/surge/logging/: Logger.java  LoggerFactory.java
android/surge/src/main/java/co/instil/surge/player/: RtspErrorCode.java  RtspPlayer.java  RtspPlayerDelegate.java  SurgeRtspPlayer.java  SurgeRtspPlayerDelegate.java
android/surge/src/main/jni/: ClassLoader.cpp  ClassLoader.h  JavaAuthenticator.cpp  JavaAuthenticator.h  RtspClientDelegateWrapper.cpp  RtspClientDelegateWrapper.h  RtspClientWrapper.cpp  RtspClientWrapper.h  RtspLoggingDelegateWrapper.cpp  RtspLoggingDelegateWrapper.h  TypeConverters.cpp  TypeConverters.h
android/surge/src/main/res/values/: strings.xml
android/surge/src/main/resources/: android-logger.properties
android/surge/src/test/java/co/instil/surge/: ExampleUnitTest.java
core/: CMakeLists.txt  build-release.sh
core/src/: AuthenticationService.cc  AuthenticationService.h  Base64.h  BaseAuthenticator.h  BaseWaitableEvent.h  BasicDigestAuthenticator.cc  BasicDigestAuthenticator.h  BasicFDEvent.h  BitstreamReader.cc  BitstreamReader.cpp  BitstreamReader.h  BitstreamWriter.cc  BitstreamWriter.cpp  BitstreamWriter.h  CMakeLists.txt  Config.h.in  Constants.h  DataEventQueue.h  DateTime.cc  DateTime.h  Depacketizer.h  Describe.h  DescribeResponse.h  DispatchQueue.cc  DispatchQueue.h  ErrorDispatcher.cc  ErrorDispatcher.h  FireableEvent.cc  FireableEvent.h  H264Depacketizer.cc  H264Depacketizer.h  H265Depacketizer.cc  H265Depacketizer.h  Helpers.cc  Helpers.h  ILoggingDelegate.h  IRtspClientDelegate.h  ISocketHandlerDelegate.h  ITLSClient.h  ITransportInterface.h  (+69 more)
core/test/: CMakeLists.txt  DescribeResponseTests.cc  NaluParser.h  ScratchTest.cc  SessionDescriptionV0Tests.cc  UrlTests.cc
src/: Base64.cc  Base64.h  BaseWaitableEvent.h  BasicFDEvent.h  CMakeLists.txt  Config.h.in  Constants.h  DataEventQueue.h  DateTime.cc  DelegateInterface.h  Describe.h  DescribeResponse.h  ErrorDispatcher.cc  ErrorDispatcher.h  FireableEvent.cc  FireableEvent.h  H264Depacetizer.cc  H264Depacetizer.h  Helpers.cc  Helpers.h  ILoggingDelegate.h  ITransportInterface.h  InterleavedRtspTransport.cc  InterleavedRtspTransport.h  Logging.h  LoggingDelegate.h  MJPEGDepacketizer.cc  MJPEGDepacketizer.h  MP4VDepacketizer.cc  MP4VDepacketizer.h  MimeTypes.h  Mutex.cc  Mutex.h  MutexLocker.h  Options.h  Pause.h  Play.h  Response.h  ResponseFactory.h  RtpPacket.cc  (+31 more)
src/wrappers/java/: RtspClientProxy.cc  RtspClientProxy.h  interface.i
src/wrappers/node/: surge.cc
src/wrappers/objc-swift/Surge.xcworkspace/: contents.xcworkspacedata
src/wrappers/objc-swift/Surge/Shared/: RtspPlayer.h  RtspPlayer.mm  SurgeDecoder.h  SurgeDecoder.m  SurgeLogging.h  SurgeRtspPlayer.h  SurgeRtspPlayer.mm
src/wrappers/objc-swift/Surge/Shared/H264/: NaluParser.h  NaluSegment.m  NaluSegmentTypes.h  SurgeH264Decoder.m
src/wrappers/objc-swift/Surge/Shared/Libraries/librtsp-ios/include/: BaseWaitableEvent.h  DataEventQueue.h  DateTime.h  DelegateInterface.h  Describe.h  ErrorDispatcher.h  FireableEvent.h  Logging.h  LoggingDelegate.h  MP4VDepacketizer.h  Mutex.h  MutexLocker.h  Play.h  RtspCommand.h  RtspCommandFactory.h  SessionDescription.h  SessionDescriptionFactory.h  Setup.h  Teardown.h  Thread.h  Url.h  interface_wrap.h
src/wrappers/objc-swift/Surge/Surge.xcodeproj/: project.pbxproj
src/wrappers/objc-swift/Surge/SurgeTvOS/: SurgeTvOS.h
src/wrappers/objc-swift/Surge/SurgeWatchOS/: SurgeWatchOS.h
src/wrappers/objc-swift/Surge/SurgeiOS/: SurgeiOS.h
src/wrappers/objc-swift/SurgeiOSTestApp/SurgeiOSTestApp/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
src/wrappers/objc-swift/SurgeiOSTestApp/SurgeiOSTestApp.xcodeproj/: project.pbxproj
src/wrappers/python/: Surge.pxd
test/: CMakeLists.txt  Cameras.h  NaluParser.h  RtspResponseTests.cc  RxTest.cpp  ScratchTest.cc  SetupResponseTests.cc  TestUtil.cc  TestUtil.h  UrlTests.cc
(+651 files in other folders)
